# autonomous-delta

./: .dockerignore  .gitignore  Dockerfile.firmware  Dockerfile.ros  README.md  deploy.sh  docker-compose.yml  setup.sh
firmware/delta-fw/: CMakeLists.txt
firmware/delta-fw/components/battery_monitor/: CMakeLists.txt  battery_monitor.c
firmware/delta-fw/components/battery_monitor/include/: battery_monitor.h
firmware/delta-fw/components/dc_motor/: CMakeLists.txt  dc_motor.c
firmware/delta-fw/components/dc_motor/include/: dc_motor.h
firmware/delta-fw/components/end_effector/: CMakeLists.txt  end_effector.c
firmware/delta-fw/components/end_effector/include/: end_effector.h
firmware/delta-fw/components/stepper/: CMakeLists.txt  stepper.c
firmware/delta-fw/components/stepper/include/: stepper.h
firmware/delta-fw/components/usb_serial_transport/: CMakeLists.txt  usb_serial_transport.c
firmware/delta-fw/components/usb_serial_transport/include/: usb_serial_transport.h
firmware/delta-fw/main/: CMakeLists.txt  main.c
ros2_ws/src/delta_robot_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/delta_robot_bringup/launch/: controller.launch.py  delta_robot.launch.py  delta_robot_constrained.launch.py  hardware.launch.py  simulation.launch.py  simulation_teleop.launch.py  system.launch.py  test_urdf.launch.py
ros2_ws/src/delta_robot_bringup/scripts/: delta_robot.py
ros2_ws/src/delta_robot_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/delta_robot_control/delta_robot_control/: delta_ik.py  delta_robot_sim.py
ros2_ws/src/delta_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/delta_robot_description/config/: delta_robot.rviz
ros2_ws/src/delta_robot_description/launch/: display.launch.py  robot_state_publisher.launch.py
ros2_ws/src/delta_robot_description/urdf/: delta_robot.urdf.xacro
ros2_ws/src/delta_robot_hardware/: package.xml  setup.cfg  setup.py
ros2_ws/src/delta_robot_hardware/delta_robot_hardware/: camera_node.py  detector_node.py  ee_aruco_tracker.py  teleop_node.py
ros2_ws/src/delta_robot_hardware/models/weed_model/ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
