<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delta_robot_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and configuration for delta robot system (simulation and hardware)</description>
  <maintainer email="dangerankur56@gmail.com">retro</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>delta_robot_description</exec_depend>
  <exec_depend>delta_robot_hardware</exec_depend>
  <exec_depend>delta_robot_control</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
