<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delta_robot_hardware</name>
  <version>0.0.0</version>
  <description>Hardware interface nodes for delta robot: camera, detector, ArUco tracker, and PS4 teleop</description>
  <maintainer email="dangerankur56@gmail.com">retro</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>

  <!-- System/Python runtime deps used by nodes -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <!-- PiCamera2 is required by camera_node on Raspberry Pi OS -->
  <exec_depend>python3-picamera2</exec_depend>

  <!-- NCNN dependencies for optimized inference -->
  <exec_depend>libncnn-dev</exec_depend>
  <exec_depend>python3-pip</exec_depend>

  <!-- Performance optimization libraries for RPi4 -->
  <exec_depend>libomp-dev</exec_depend>
  <exec_depend>libopenblas-dev</exec_depend>
  <exec_depend>python3-psutil</exec_depend>

  <!-- Additional computer vision optimizations -->
  <exec_depend>libgstreamer1.0-dev</exec_depend>
  <exec_depend>libgstreamer-plugins-base1.0-dev</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
